<resources>
    <string name="app_name">We Love wheelchair</string>
    <string name="hub1">รถวีลแชร์</string>
    <string name="hub2">ร้านค้าวีลแชร์</string>
    <string name="hub3">การเดินทาง</string>
    <string name="hub4">สถานที่ท่องเที่ยว</string>

    <string name="hub5">เครื่องบิน</string>
    <string name="hub6">รถแท็กซี่</string>
    <string name="hub7">MRT</string>
    <string name="hub8">BTS</string>
    <string name="hub9">สิทธิพิเศษ</string>

    <string name="hub10">ข้อมูลวีลแชร์ \n เบื่องต้น</string>
    <string name="hub11">การเบิกรถวีลแชร์</string>
    <string name="hub12">วิธีใช้งานวีลแชร์</string>
    <string name="hub13">วิธีใช้งานแอพพลิเคชั่น</string>

    <string name="data1">กรอกข้อมูลเบื้องต้น</string>
    <string name="data2"> อาการเบื้องต้น </string>
    <string name="data3">พอเดินได้</string>
    <string name="data4">พอเดินได้เล็กน้อย</string>
    <string name="data5">ไม่สามารถเดินได้</string>

    <string name="dataweight">น้ำหนักตัว</string>
    <string name="dataweight1">ช่วง40-60กิโลกรัม</string>
    <string name="dataweight2">ช่วง61-89กิโลกรัม</string>
    <string name="dataweight3">ช่วง90-150กิโลกรัม</string>

    <string name="datatraval">การเดินทาง</string>
    <string name="datatraval1">เดินทางบ่อยครั้ง</string>
    <string name="datatraval2">เดินทางไม่บ่อยครั้ง</string>

    <string name="datacar">ยานพหนะ</string>
    <string name="datacar1">มียานพหนะ</string>
    <string name="datacar2">ไม่มียานพหนะ</string>

    <string name="dataaround">งบประมาณ</string>
    <string name="dataaround1">ต่ำกว่า5,000บาท</string>
    <string name="dataaround2">ต่ำกว่า10,000บาท</string>
    <string name="dataaround3">ต่ำกว่า15,000บาท</string>
    <string name="dataaround4">ไม่จำกัด</string>

    <string name="passdata">ส่งข้อมูล</string>


    <string name="inf">วิธีการเรียกใช้บริการรถแท็กซี่
        \n สามารถทำได้ตามขั้นตอน ดังต่อไปนี้
  \n  1.ติดต่อกับศูนย์บริการเพื่อทำการนัดหมายสถานที่
        \n เวลาในการรับ-ส่ง สามารถโทรติดต่อได้ที่ 02-294-6524
        \n ตั้งแต่เวลา 9.00-16.00น.โดยจะมีรถบริการตั้งแต่เวลา 6.00-22.00น.
        \n
 \n 2. ลงทะเบียนผู้ใช้งาน 
        \n ในกรณีที่รับบริการครั้งแรก เพื่อความสะดวกในการรับบริการในครั้งต่อไป ในกรณีที่เคยลงทะเบียนแล้วสามารถแจ้งเบอร์โทรศัพท์เพื่อรับบริการได้ทันที
 \n \n 3. แจ้งสถานที่ และเวลานัดหมายในการรับบริการ
        \n รถบริการสามารถรองรับ ผู้โดยสารที่ใช้วีลแชร์ได้ 2 ท่านและ ผู้ติดตามได้ 2 ท่าน ตัวอย่างภายในรถบริการ \n
    สถานีที่มีสิ่งอำนวยความสะดวก เช่น ลิฟต์ ทางลาด ให้สำหรับผู้ใช้วีลแชร์
         \n มีทั้งหมด 16 สถานี ได้แก่
         \n สถานีหมอชิต สถานีสยาม สถานีอโศก สถานีอ่อนนุช สถานีช่องนนทรี สถานีกรุงธนบุรี
    สถานีวงเวียนใหญ่ สถานีโพธิ์นิมิตร สถานีตลาดพลู สถานีวุฒากาศ สถานีบางหว้า สถานีบางจาก สถานีปุณณวิถี สถานีอุดมสุข สถานีบางนา และสถานีแบริ่ง</string>

<string name="inf1">
    การขึ้นเครื่องบินโดยใช้วีลแชร์ส่วนตัว
    \n ✔รถวีลแชร์ต้องสามารถพับเก็บได้ โดยไม่ต้องถอดล้อเลยแยกชิ้นส่วนอื่นใด
    \n ✔รถวีลแชร์ต้องมีขนาดที่รองรับการจัดเก็บในห้องโดยสารของเครื่องบิน
    \n ✔สามารถเช็คอินรถวีลแชร์แบบเข็นหรือแบบใช้พลังงานแบตเตอรี่ ในลักษณะสัมภาระที่โหลดขึ้นเครื่องบิน </string>

<string name="inf1_1">
    ข้อจำกัด
    \n ทางสายการบินจะไม่สามารถให้ความช่วยเหลือแก่ผู้โดยสาร
    \n การเคลื่อนย้ายเข้า/ออก จากรถวีแชร์เข้าที่นั่งของท่าน
    \n การเตรียมรับประทานอาหาร
    \n การเคลื่อนไหวเข้าออก/จากประตูห้องน้ำ</string>

    <string name="inf2">
    การใช้วีลแชร์ส่วนตัวขึ้นรถไฟฟ้า MRT
   \n ✔ลิฟท์สำหรับผู้ใช้วิวแชร์
   \n ✔โทรศัพท์
   \n ✔เครื่องออกบัตรโดยศาลอัตโนมัติ
    \n✔ห้องน้ำสาระธารณสำหรับผู้ใช้วิวแชร์สถานีสวนจตุจักร, สถานีพหลโยธิน, สถานีพระราม9 ,สถานีสุขุมวิท เปิดให้บริการทุกวัน
   \n ✔สถานีกำแพงเพชรเปิดให้บริการเฉพาะวันศุกร์เสาร์อาทิตย์ตั้งแต่เวลา 09:00 - 21:00 น.</string>
    \n✔จุดล็อวิวแชร์


<string name="inf4">
    สิทธิประโยชน์สำหรับผู้ใช้วีลแชร์
    \n
    \n✔ผู้พิการต้องมีบัตรประจำตัวประชาชนคนพิการเพื่อแสดงยืนยันตัวตนในการใช้สิทธิ์\n
    \n✔รถไฟฟ้าทุกประเภทจะยกเว้นค่าโดยสารสำหรับผู้พิการ ทุกประเภท\n
    \n✔องค์การขนส่งมวลชนกรุงเทพฯ (ขสมก.) ลดหย่อนค่าโดยสารสำหรับผู้พิการโดยไม่คิดค่าธรรมเนียม</string>

    <string name="inf3">
    การใช้วีลแชร์ส่วนตัวคืนรถไฟฟ้า BTS
    \n ✔สถานีที่มีสิ่งอำนวยความสะดวกเช่น ลิฟท์ ทางลาด
        \n
        \n✔สำหรับผู้ใช้วิวแชร์ทั้งหมดมี 16 สถานี
   \n ได้แก่ สถานีหมอชิต สถานีสยาม สถานีอโศกสถานีอ่อนนุช สถานีช่องนนทรี สถานี ธนบุรีสถานีวงเวียนใหญ่ สถานีโพธิ์นิมิตร  สถานีตลาดพลู สถานีบางหว้าสถานีบางจาก สถานีปุณณวิถี สถานีอุดมสุข สถานีบางนา และสถานีแบริ่ง
    </string>

    <string name="infm5">
    สิทธิประการสุขภาพ</string>
    <string name="inf5">
    สำหรับผู้ที่มีประกันสุขภาพสามารถรับสิทธิ์ได้ดังนี้
    \n✔สามารถเข้ารับการฟื้นฟูสภาพผู้พิการได้ฟรี
    \n✔สามารถได้รับอุปกรณ์เครื่องช่วยความพิการโดยขอรับอุปกรณ์เครื่องช่วย เหลือได้จากหน่วยงานบริการที่ใกล้บ้าน
    \n✔ผู้พิการและผู้ดูแลสามารถได้รับการฝึกอบรมเพื่อการฟื้นฟูสมรรถภาพและการดูแลช่วยเหลือผู้พิการ </string>
    <string name="title_activity_maps">Map</string>

    <string name="textView15">ชื่อร้านค้า</string>
    <string name="textView23">ที่อยู่ร้านค้า</string>
    <string name="textView32">เบอร์โทรศัพท์</string>
    <string name="textView33">ภาค</string>




</resources>

