<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="appewtc.masterung.welovewheelchair.DetailWheelChairActivity"
    android:background="@drawable/bg3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/b_1"
            android:layout_weight="10" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon"
                android:id="@+id/imageView7"
                android:src="@drawable/page3_1"
                android:onClick="clickHub5"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon"
                android:id="@+id/imageView8"
                android:layout_weight="1"
                android:src="@drawable/page3_2"
                android:onClick="clickHub6" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hub5"
                android:id="@+id/textView5"
                android:textSize="@dimen/h2"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="@color/textb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hub6"
                android:id="@+id/textView6"
                android:textSize="@dimen/h2"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="@color/textb" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon"
                android:id="@+id/imageView11"
                android:layout_weight="1"
                android:src="@drawable/page3_3"
                android:onClick="clickHub7" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon"
                android:id="@+id/imageView12"
                android:layout_weight="1"
                android:src="@drawable/page3_4"
                android:onClick="clickHub8" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hub8"
                android:id="@+id/textView21"
                android:textSize="@dimen/h2"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="@color/textb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hub7"
                android:id="@+id/textView22"
                android:textSize="@dimen/h2"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="@color/textb" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon"
            android:id="@+id/imageView9"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/page3_5"
            android:onClick="clickHub9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hub9"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h2"
            android:textColor="@color/textb" />

    </LinearLayout>
</RelativeLayout>