<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sdu.it56.welovewheelchair.MainActivity"
    android:background="@drawable/bg_v1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageView2"
                android:src="@drawable/page1_1"
                android:onClick="clickHub1"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageView3"
                android:src="@drawable/page1_2"
                android:layout_weight="1"
                android:onClick="clickHub2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hub1"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:gravity="center_horizontal"
                android:textColor="@color/textb" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hub2"
                android:id="@+id/textView4"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:gravity="center_horizontal"
                android:textColor="@color/textb" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/imageView4"
                android:src="@drawable/page1_3"
                android:layout_weight="1"
                android:onClick="clickHub3" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView5"
                android:src="@drawable/page1_4"
                android:layout_weight="1"
                android:onClick="clickHub4" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hub3"
                android:id="@+id/textView"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:gravity="center_horizontal"
                android:textColor="@color/textb" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hub4"
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:gravity="center_horizontal"
                android:textColor="@color/textb" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageView"
        android:src="@drawable/howto"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="clickHub13" />

</RelativeLayout>
