<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sdu.it56.welovewheelchair.Main_detail_wheelchair"
    android:background="@drawable/bg100">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:id="@+id/imageView19"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/b_5" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon"
            android:layout_marginTop="15dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageView23"
                android:src="@drawable/page2_1"
                android:layout_weight="1.05"
                android:onClick="clickHub10" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageView24"
                android:src="@drawable/page2_2"
                android:layout_weight="1"
                android:onClick="clickHub11" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hub10"
                android:id="@+id/textView14"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:gravity="center_horizontal"
                android:textColor="@color/textb" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hub11"
                android:id="@+id/textView18"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:gravity="center_horizontal"
                android:textColor="@color/textb" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon"
            android:layout_marginTop="15dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView25"
                android:src="@drawable/page2_3"
                android:layout_weight="1"
                android:onClick="clickHub12" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hub12"
                android:id="@+id/textView19"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:gravity="center_horizontal"
                android:textColor="@color/textb" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
